--- a/app/assets/styles/core/_map.scss
+++ b/app/assets/styles/core/_map.scss
@@ -11,6 +11,10 @@
   }
 }
 
+.leaflet-container a {
+  color: $base-color !important;
+}
+
 .leaflet-overlay-pane svg {
   pointer-events: all;
 }
